# cmake-modules

./: .azure-pipelines.yml  CMakeLists.txt  README.md
.github/workflows/: test.yml
CompileUnits/: CompileUnits.cmake  README.md
CompileUnits/example/: CMakeLists.txt
CompileUnits/example/src/: CMakeLists.txt
CompileUnits/example/src/lib/: CMakeLists.txt
CompileUnits/example/src/lib/a/: CMakeLists.txt
CompileUnits/example/src/lib/a/include/example/lib/: a.hpp
CompileUnits/example/src/lib/a/src/: a.cpp
CompileUnits/example/src/lib/b/: CMakeLists.txt
CompileUnits/example/src/lib/b/src/: b.cpp
CompileUnits/example/src/lib/c/: CMakeLists.txt
CompileUnits/example/src/lib/c/include/example/lib/: c.hpp
CompileUnits/example/src/lib/c/src/: c.cpp
CompileUnits/example/src/lib/c/test/: unit.cpp
CompileUnits/example/src/lib/interface/: CMakeLists.txt
CompileUnits/example/src/lib/interface/include/example/lib/: interface.hpp
